--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css">
   </head>
   <body>
     <div class="header__main">
