--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/acordeon.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
-    <div class="header__main">
+    <div class="main">
       <header class="header">
         <img src="./assets/img/avatar.jpg" alt="avatar" class="avatar" />
         <h1 class="header__title">Olá, <br />eu sou seu-nome</h1>
@@ -27,6 +28,20 @@
           <p class="mail">exemplo@email.com</p>
         </div>
       </header>
+
+      <section class="acordeon open">
+        <button class="trigger" type="button">
+          Idiomas
+        </button>
+        <div class="content">
+          <ul>
+            <li>Português</li>
+            <li>Ingles</li>
+            <li>Espanhol</li>
+          </ul>
+        </div>
+      </section>
     </div>
+    <script src="./assets/js/acordeon.js"></script>
   </body>
 </html>
