--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/acordeon.css" />
+    <link rel="stylesheet" href="./assets/css/languages.css">
     <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
@@ -34,7 +35,7 @@
           Idiomas
         </button>
         <div class="content">
-          <ul>
+          <ul class="languages">
             <li>Português</li>
             <li>Ingles</li>
             <li>Espanhol</li>
