--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./assets/css/acordeon.css" />
     <link rel="stylesheet" href="./assets/css/languages.css" />
     <link rel="stylesheet" href="./assets/css/portfolio.css" />
+    <link rel="stylesheet" href="./assets/css/experience.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
@@ -35,8 +36,10 @@
         </div>
       </header>
 
-      <section class="acordeon open">
-        <button class="trigger" type="button">Idiomas</button>
+      <section class="acordeon">
+        <button class="trigger" type="button">
+          <h2>Idiomas</h2>
+        </button>
         <div class="content">
           <ul class="languages">
             <li>Português</li>
@@ -46,27 +49,60 @@
         </div>
       </section>
 
-      <section class="acordeon open">
-        <button class="trigger" type="button">Portfólio</button>
+      <section class="acordeon">
+        <button class="trigger" type="button">
+          <h2>Portfólio</h2>
+        </button>
         <div class="content">
           <ul class="portfolio">
             <li>
-              <span class="title github">Titulo do seu projeto</span>
+              <h3 class="title github">Titulo do seu projeto</h3>
               <a href="https://duckduckgo.com/" target="_blank"
                 >Link do seu projeto</a
               >
             </li>
             <li>
-              <span class="title github">Titulo do seu projeto</span>
+              <h3 class="title github">Titulo do seu projeto</h3>
               <a href="https://duckduckgo.com/" target="_blank"
                 >Link do seu projeto</a
               >
             </li>
             <li>
-              <span class="title github">Titulo do seu projeto</span>
+              <h3 class="title github">Titulo do seu projeto</h3>
               <a href="https://duckduckgo.com/" target="_blank"
                 >Link do seu projeto</a
               >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="acordeon open">
+        <button class="trigger" type="button">
+          <h2>Experiência Profissional</h2>
+        </button>
+        <div class="content">
+          <ul class="experience">
+            <li>
+              <h3 class="title">Titulo da experiência</h3>
+              <span class="period">Jan 2025 - Current</span>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                eveniet hic tempora corporis ab, reprehenderit iusto quo fugit
+                pariatur dolore obcaecati voluptates ea iste consequuntur! Porro
+                expedita veritatis tempore odio.
+              </p>
+            </li>
+          </ul>
+          <ul class="experience">
+            <li>
+              <h3 class="title">Titulo da experiência</h3>
+              <span class="period">Mês Ano - Current</span>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
+                eveniet hic tempora corporis ab, reprehenderit iusto quo fugit
+                pariatur dolore obcaecati voluptates ea iste consequuntur! Porro
+                expedita veritatis tempore odio.
+              </p>
             </li>
           </ul>
         </div>
