--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/acordeon.css" />
+    <link rel="stylesheet" href="./assets/css/skills.css">
     <link rel="stylesheet" href="./assets/css/languages.css" />
     <link rel="stylesheet" href="./assets/css/portfolio.css" />
     <link rel="stylesheet" href="./assets/css/experience.css" />
@@ -35,6 +36,39 @@
           </p>
         </div>
       </header>
+
+      <section class="acordeon open">
+        <button class="trigger" type="button">
+          <h2>Skills</h2>
+        </button>
+        <div class="content">
+          <div class="skills">
+            <section class="tools">
+              <h3>Habilidades Profissionais:</h3>
+              <ul>
+                <li>
+                  <img src="./assets/img/icons/languages/react.svg" alt="react" title="React">
+                  <img src="./assets/img/icons/languages/javascript.svg" alt="javascript" title="JavaScript">
+                  <img src="./assets/img/icons/languages/java.svg" alt="java" title="Java">
+                  <img src="./assets/img/icons/languages/python.svg" alt="python" title="Python">
+                </li>
+              </ul>
+            </section>
+            <section class="personal">
+              <h3>Habilidades Pessoais:</h3>
+              <ul>
+                <li>Liderança</li>
+                <li>Comunicação</li>
+                <li>Organização</li>
+                <li>Trabalho em equipe</li>
+                <li>Flexibilidade</li>
+                <li>Liderança</li>
+              </ul>
+            </section>
+          </div>
+
+        </div>
+      </section>
 
       <section class="acordeon">
         <button class="trigger" type="button">
@@ -76,7 +110,7 @@
           </ul>
         </div>
       </section>
-      <section class="acordeon open">
+      <section class="acordeon">
         <button class="trigger" type="button">
           <h2>Experiência Profissional</h2>
         </button>
