--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
   <body>
     <main class="main">
       <header class="header">
-        <img src="./assets/img/avatar.jpg" alt="avatar" class="avatar" />
-        <h1 class="header__title">Olá, <br />eu sou seu-nome</h1>
+        <img src="./assets/img/avatar.jpg" alt="Foto de Perfil" class="avatar profile.photo" />
+        <h1 class="header__title">Olá, <br />eu sou <span class="profile.name">Carregando...</span></h1>
         <div class="header__info">
-          <p class="person">Formação</p>
-          <p class="location">Localização</p>
+          <p class="person"><span class="profile.job">Carregando...</span></p>
+          <p class="location"><span class="profile.location">Carregando...</span></p>
           <p class="phone">
-            <a href="tel:(12) 3 3456-7890">(12) 3 3456-7890</a>
+            <a href="tel:(12) 3 3456-7890" class="profile.phone">Carregando...</a>
           </p>
           <p class="mail">
-            <a href="mailto:exemplo@email.com">exemplo@email.com</a>
+            <a href="mailto:exemplo@email.com" class="profile.mail">Carregando...</a>
           </p>
         </div>
       </header>
 
-      <section class="acordeon open">
+      <section class="acordeon">
         <button class="trigger" type="button">
           <h2>Skills</h2>
         </button>
