--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <body>
     <main class="main">
       <header class="header">
-        <img src="./assets/img/avatar.jpg" alt="Foto de Perfil" class="avatar profile.photo" />
-        <h1 class="header__title">Olá, <br />eu sou <span class="profile.name">Carregando...</span></h1>
+        <img src="./assets/img/avatar.jpg" alt="Foto de Perfil" class="avatar" id="profile.photo" />
+        <h1 class="header__title">Olá, <br />eu sou <span id="profile.name">Carregando...</span></h1>
         <div class="header__info">
-          <p class="person"><span class="profile.job">Carregando...</span></p>
-          <p class="location"><span class="profile.location">Carregando...</span></p>
+          <p class="person"><span id="profile.job">Carregando...</span></p>
+          <p class="location"><span id="profile.location">Carregando...</span></p>
           <p class="phone">
-            <a href="tel:(12) 3 3456-7890" class="profile.phone">Carregando...</a>
+            <a href="tel:(12) 3 3456-7890" id="profile.phone">Carregando...</a>
           </p>
           <p class="mail">
-            <a href="mailto:exemplo@email.com" class="profile.mail">Carregando...</a>
+            <a href="mailto:exemplo@email.com" id="profile.mail">Carregando...</a>
           </p>
         </div>
       </header>
@@ -56,13 +56,10 @@
             </section>
             <section class="personal">
               <h3>Habilidades Pessoais:</h3>
-              <ul>
-                <li>Liderança</li>
-                <li>Comunicação</li>
-                <li>Organização</li>
-                <li>Trabalho em equipe</li>
-                <li>Flexibilidade</li>
-                <li>Liderança</li>
+              <ul id="profile.skills.softSkills">
+                <li>Carregando...</li>
+                <li>Carregando...</li>
+                <li>Carregando...</li>
               </ul>
             </section>
           </div>
