--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
           <div class="skills">
             <section class="tools">
               <h3>Habilidades Profissionais:</h3>
-              <ul>
-                <li>
-                  <img src="./assets/img/icons/languages/react.svg" alt="react" title="React">
-                  <img src="./assets/img/icons/languages/javascript.svg" alt="javascript" title="JavaScript">
-                  <img src="./assets/img/icons/languages/java.svg" alt="java" title="Java">
-                  <img src="./assets/img/icons/languages/python.svg" alt="python" title="Python">
-                </li>
+              <ul id="profile.skills.hardSkills">
               </ul>
             </section>
             <section class="personal">
@@ -72,10 +66,10 @@
           <h2>Idiomas</h2>
         </button>
         <div class="content">
-          <ul class="languages">
-            <li>Português</li>
-            <li>Ingles</li>
-            <li>Espanhol</li>
+          <ul class="languages" id="profile.skills.languages">
+            <li>Carregando...</li>
+            <li>Carregando...</li>
+            <li>Carregando...</li>
           </ul>
         </div>
       </section>
