feat: add dynamic portfolio and professional experience sections with data binding

--- a/index.html
+++ b/index.html
@@ -79,26 +79,7 @@
           <h2>Portfólio</h2>
         </button>
         <div class="content">
-          <ul class="portfolio">
-            <li>
-              <h3 class="title github">Titulo do seu projeto</h3>
-              <a href="https://duckduckgo.com/" target="_blank"
-                >Link do seu projeto</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">Titulo do seu projeto</h3>
-              <a href="https://duckduckgo.com/" target="_blank"
-                >Link do seu projeto</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">Titulo do seu projeto</h3>
-              <a href="https://duckduckgo.com/" target="_blank"
-                >Link do seu projeto</a
-              >
-            </li>
-          </ul>
+          <ul class="portfolio" id="profile.portfolio"></ul>
         </div>
       </section>
       <section class="acordeon">
@@ -106,30 +87,7 @@
           <h2>Experiência Profissional</h2>
         </button>
         <div class="content">
-          <ul class="experience">
-            <li>
-              <h3 class="title">Titulo da experiência</h3>
-              <span class="period">Jan 2025 - Current</span>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                eveniet hic tempora corporis ab, reprehenderit iusto quo fugit
-                pariatur dolore obcaecati voluptates ea iste consequuntur! Porro
-                expedita veritatis tempore odio.
-              </p>
-            </li>
-          </ul>
-          <ul class="experience">
-            <li>
-              <h3 class="title">Titulo da experiência</h3>
-              <span class="period">Mês Ano - Current</span>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
-                eveniet hic tempora corporis ab, reprehenderit iusto quo fugit
-                pariatur dolore obcaecati voluptates ea iste consequuntur! Porro
-                expedita veritatis tempore odio.
-              </p>
-            </li>
-          </ul>
+          <ul class="experience" id="profile.professionalExperience"></ul>
         </div>
       </section>
     </main>
