--- a/index.html
+++ b/index.html
@@ -11,28 +11,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./assets/css/global.css" />
-    <link rel="stylesheet" href="./assets/css/header.css" />
-    <link rel="stylesheet" href="./assets/css/acordeon.css" />
-    <link rel="stylesheet" href="./assets/css/skills.css">
-    <link rel="stylesheet" href="./assets/css/languages.css" />
-    <link rel="stylesheet" href="./assets/css/portfolio.css" />
-    <link rel="stylesheet" href="./assets/css/experience.css" />
-    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/header.css" />
+    <link rel="stylesheet" href="assets/css/acordeon.css" />
+    <link rel="stylesheet" href="assets/css/skills.css" />
+    <link rel="stylesheet" href="assets/css/languages.css" />
+    <link rel="stylesheet" href="assets/css/portfolio.css" />
+    <link rel="stylesheet" href="assets/css/experience.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
     <main class="main">
       <header class="header">
-        <img src="./assets/img/avatar.jpg" alt="Foto de Perfil" class="avatar" id="profile.photo" />
-        <h1 class="header__title">Olá, <br />eu sou <span id="profile.name">Carregando...</span></h1>
+        <img
+          src="assets/img/avatar.jpg"
+          alt="Foto de Perfil"
+          class="avatar"
+          id="profile.photo"
+        />
+        <h1 class="header__title">
+          Olá, <br />eu sou <span id="profile.name">Carregando...</span>
+        </h1>
         <div class="header__info">
           <p class="person"><span id="profile.job">Carregando...</span></p>
-          <p class="location"><span id="profile.location">Carregando...</span></p>
+          <p class="location">
+            <span id="profile.location">Carregando...</span>
+          </p>
           <p class="phone">
             <a href="tel:(12) 3 3456-7890" id="profile.phone">Carregando...</a>
           </p>
           <p class="mail">
-            <a href="mailto:exemplo@email.com" id="profile.mail">Carregando...</a>
+            <a href="mailto:exemplo@email.com" id="profile.mail"
+              >Carregando...</a
+            >
           </p>
         </div>
       </header>
@@ -45,8 +56,7 @@
           <div class="skills">
             <section class="tools">
               <h3>Habilidades Profissionais:</h3>
-              <ul id="profile.skills.hardSkills">
-              </ul>
+              <ul id="profile.skills.hardSkills"></ul>
             </section>
             <section class="personal">
               <h3>Habilidades Pessoais:</h3>
@@ -57,7 +67,6 @@
               </ul>
             </section>
           </div>
-
         </div>
       </section>
 
@@ -91,8 +100,8 @@
         </div>
       </section>
     </main>
-    <script src="./assets/js/acordeon.js"></script>
-    <script src="./assets/js/api.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
