feat: add footer with DIO logo and styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/portfolio.css" />
     <link rel="stylesheet" href="assets/css/experience.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
   </head>
   <body>
     <main class="main">
@@ -99,6 +100,12 @@
           <ul class="experience" id="profile.professionalExperience"></ul>
         </div>
       </section>
+
+      <footer>
+        <a href="https://www.dio.me/" target="_blank">
+          <img src="/assets/img/icons/dio.svg" alt="logo dio">
+        </a>
+      </footer>
     </main>
     <script src="assets/js/acordeon.js"></script>
     <script src="assets/js/api.js"></script>
