--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <footer>
         <a href="https://www.dio.me/" target="_blank">
-          <img src="/assets/img/icons/dio.svg" alt="logo dio">
+          <img src="assets/img/icons/dio.svg" alt="logo dio">
         </a>
       </footer>
     </main>
